PublicDocs // Term fix, etc.

--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
@@ -1407,13 +1407,13 @@
 			<ol>
 				<li>
 					前往「本地账号管理器 -&gt;
-					菜单（位于界面右上角）」并使用相关菜单选项将所有本地账号导出为备份文件。在完成步骤
+					选单（位于界面右上角）」并使用相关选单选项将所有本地账号导出为备份文件。在完成步骤
 					2 后，您需要使用此备份文件将本地账号重新导入到披萨小助手内。
 				</li>
 				<li>
-					在相同的菜单中，进入「进阶选项」并将「本地账号存储位置」切换为「应用程序容器」。切换此选项后，披萨小助手会自动退出。
+					在相同的选单中，进入「进阶选项」并将「本地账号存储位置」切换为「应用程序容器」。切换此选项后，披萨小助手会自动退出。
 				</li>
-				<li>将本地账号导入到披萨小助手内。此选项位于步骤 1 所述的菜单中。</li>
+				<li>将本地账号导入到披萨小助手内。此选项位于步骤 1 所述的选单中。</li>
 			</ol>
 
 			<p>这是针对此问题的一个经过验证的解决方法。</p>
