PublicDocs // Update information regarding device_fp.

--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
@@ -601,8 +601,7 @@
 				</p>
 
 				<h4 id="toc_24">
-					Q: How to prepare device fingerprints for a Zenless Zone Zero UID
-					governed by Miyoushe?
+					Q: How to prepare device fingerprints for UIDs governed by Miyoushe?
 				</h4>
 
 				<p>(This question is irrelevant to those UIDs governed by HoYoLAB.)</p>
@@ -1012,7 +1011,7 @@
 					時自動嘗試判定所屬的伺服器。
 				</p>
 
-				<h4 id="toc_24">Q: 受米遊社管轄的絕區零 UID 該如何自備設備指紋？</h4>
+				<h4 id="toc_24">Q: 受米遊社管轄的 UID 該如何自備設備指紋？</h4>
 
 				<p>
 					該功能需要對 iOS 版米遊社 App
@@ -1389,7 +1388,7 @@
 					时自动尝试判定所属的服务器。
 				</p>
 
-				<h4 id="toc_24">Q: 受米游社管辖的绝区零 UID 该如何自备设备指纹？</h4>
+				<h4 id="toc_24">Q: 受米游社管辖的 UID 该如何自备设备指纹？</h4>
 
 				<p>
 					该功能需要对 iOS 版米游社 App
@@ -1764,8 +1763,7 @@
 				</p>
 
 				<h4 id="toc_23">
-					Q: ゼンレスゾンゼロ
-					UID（米遊社在籍）のデバイス指紋をどのように準備すればよいか？
+					Q: UID は米遊社在籍の場合、追加情報を受け取るための特殊なデバイス指紋をどのように準備すればよいか？
 				</h4>
 
 				<p>（この質問は、HoYoLAB在籍のUIDとは無関係です。）</p>
