--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
@@ -394,10 +394,11 @@
 							Star Rail content (excluding Genshin-specific widgets like the
 							Realm Currency). Simply select the local profile dedicated to Star
 							Rail in the widget settings. The Stamina Timer, implemented using
-							iOS&#39;s built-in Live Activity feature, can also be used to show
-							the Trailblaze Power refill status in Star Rail. Custom background
-							support for widgets will be delayed for some time and may be
-							implemented later, depending on conditions.
+							iOS's built-in Live Activity feature, can also be used to show the
+							Trailblaze Power refill status in Star Rail. User-customizable
+							wallpaper support for widgets has been reintroduced since 5.2.1
+							update but cannot inherit its previous settings data. Please refer
+							to the related UI text instructions regarding its usage.
 						</p>
 					</li>
 				</ol>
@@ -490,7 +491,7 @@
 
 				<blockquote>
 					This section discusses issues starting from The Pizza Helper version
-					5.0.5.
+					5.2.1.
 				</blockquote>
 
 				<h4 id="toc_17">
@@ -844,24 +845,33 @@
 					Q: 我是星鐵披薩小助手的使用者，請問在遷移過來時需要注意什麼？
 				</h4>
 
-				<p>
-					一是資料同步：雖然基於統一披薩引擎的全新的披薩小助手可以藉由 iCloud
-					讀取到同一 Apple ID
-					下的星鐵披薩小助手的雲端資料，但同步讀取資料是需要時間的、且可能受到包括連線狀態等多方因素之影響。如希望能有更穩妥的遷移手段的話，您可以藉由星鐵披薩小助手將其本機帳號全部匯出為一個
-					JSON、再匯入到目前的新版披薩小助手內。抽卡記錄也可以用類似的手段遷移（使用
-					UIGF v4 格式）。
-				</p>
-
-				<p>
-					二是小工具（小組件）：全新的披薩小助手的所有看似給原神設計的小工具都是可以顯示星穹鐵道的內容的（洞天寶錢等原神專屬小工具除外），直接在小工具設定裡面選擇您創建的星穹鐵道專用的本機帳號即可。依賴
-					iOS 內建的即時動態（Live
-					Activity）功能實作的玩家體力計時器也可以用來顯示星穹鐵道的開拓力回滿狀態。對於小工具的自訂背景的功能支持會欠奉一段時間，待諸多條件允許之後可能會再行實作。
-				</p>
+				<ol>
+					<li>
+						<p>
+							<strong>資料同步</strong
+							>：雖然基於統一披薩引擎的全新的披薩小助手可以藉由 iCloud
+							讀取到同一 Apple ID
+							下的星鐵披薩小助手的雲端資料，但同步讀取資料是需要時間的、且可能受到包括連線狀態等多方因素之影響。如希望能有更穩妥的遷移手段的話，您可以藉由星鐵披薩小助手將其本機帳號全部匯出為一個
+							JSON、再匯入到目前的新版披薩小助手內。抽卡記錄也可以用類似的手段遷移（使用
+							UIGF v4 格式）。
+						</p>
+					</li>
+					<li>
+						<p>
+							<strong>小工具（小組件）</strong
+							>：全新的披薩小助手的所有看似給原神設計的小工具都是可以顯示星穹鐵道的內容的（洞天寶錢等原神專屬小工具除外），直接在小工具設定裡面選擇您創建的星穹鐵道專用的本機帳號即可。依賴
+							iOS 內建的即時動態（Live
+							Activity）功能實作的玩家體力計時器也可以用來顯示星穹鐵道的開拓力回滿狀態。對於小工具的自訂壁紙的功能支持則是從
+							5.2.1
+							版更新開始支援，且無法繼承之前的設定。詳情請洽相關功能的介面文字說明。
+						</p>
+					</li>
+				</ol>
 
 				<h4 id="toc_11">Q: 披薩小助手的工作原理是什麼？</h4>
 
 				<p>
-					米游社 / HoYoLAB 客體應用（client app）會藉由向米哈遊 / Cognosphere
+					米遊社 / HoYoLAB 客體應用（client app）會藉由向米哈遊 / Cognosphere
 					的伺服器的後端請求遊戲內的一些資訊。這個手段可以查詢到一些與此有關的遊戲狀態資訊（比如玩家體力的回滿進度，等）。披薩小助手使用您的
 					UID 與 Cookie 資訊可以重複這個查詢過程、代替您使用這兩款 App
 					向對應的伺服器的後端請求遊戲內的這些資訊、並展示於披薩小助手的主介面與小工具當中。《披薩小助手隱私政策》已經解釋了與這些
@@ -922,7 +932,7 @@
 				<h2 id="toc_16">// 技術故障與使用方法</h2>
 
 				<blockquote>
-					本章節內容以披薩小助手 5.0.5 版開始的版本為討論情形。
+					本章節內容以披薩小助手 5.2.1 版開始的版本為討論情形。
 				</blockquote>
 
 				<h4 id="toc_17">
@@ -1190,7 +1200,7 @@
 				<ol>
 					<li>
 						HoYoLAB
-						或米游社：实时便笺、个人战报、账簿、抽卡记录获取、角色库存清单、游戏活动。
+						或米遊社：实时便笺、个人战报、账簿、抽卡记录获取、角色库存清单、游戏活动。
 					</li>
 					<li>Enka Networks：角色展柜。</li>
 				</ol>
@@ -1221,19 +1231,28 @@
 					Q: 我是星铁披萨小助手的用户，请问在迁移过来时需要注意什么？
 				</h4>
 
-				<p>
-					一是资料同步：虽然基于统一披萨引擎的全新的披萨小助手可以通过 iCloud
-					读取到同一 Apple ID
-					下的星铁披萨小助手的云端资料，但同步读取资料是需要时间的、且可能受到包括网络连接状态等多方因素之影响。如希望能有更稳妥的迁移手段的话，您可以通过星铁披萨小助手将其本地账号全部导出为一个
-					JSON、再导入到目前的新版披萨小助手内。抽卡记录也可以用类似的手段迁移（使用
-					UIGF v4 格式）。
-				</p>
-
-				<p>
-					二是小工具（小组件）：全新的披萨小助手的所有看似给原神设计的小工具都是可以显示星穹铁道的内容的（洞天宝钱等原神专属小工具除外），直接在小工具设定里面选择您创建的星穹铁道专用的本地账号即可。依赖
-					iOS 内建的实时活动（Live
-					Activity）功能实作的玩家体力计时器也可以用来显示星穹铁道的开拓力回满状态。对于小工具的自订背景的功能支持会欠奉一段时间，待诸多条件允许之后可能会再行实作。
-				</p>
+				<ol>
+					<li>
+						<p>
+							<strong>资料同步</strong
+							>：虽然基于统一披萨引擎的全新的披萨小助手可以通过 iCloud
+							读取到同一 Apple ID
+							下的星铁披萨小助手的云端资料，但同步读取资料是需要时间的、且可能受到包括网络连接状态等多方因素之影响。如希望能有更稳妥的迁移手段的话，您可以通过星铁披萨小助手将其本地账号全部导出为一个
+							JSON、再导入到目前的新版披萨小助手内。抽卡记录也可以用类似的手段迁移（使用
+							UIGF v4 格式）。
+						</p>
+					</li>
+					<li>
+						<p>
+							<strong>小工具（小组件）</strong
+							>：全新的披萨小助手的所有看似给原神设计的小工具都是可以显示星穹铁道的内容的（洞天宝钱等原神专属小工具除外），直接在小工具设定里面选择您创建的星穹铁道专用的本地账号即可。依赖
+							iOS 内建的实时活动（Live
+							Activity）功能实作的玩家体力计时器也可以用来显示星穹铁道的开拓力回满状态。对于小工具的自订壁纸的功能支持则是从
+							5.2.1
+							版更新开始支持，且无法继承之前的设定。详情请洽相关功能的介面文字说明。
+						</p>
+					</li>
+				</ol>
 
 				<h4 id="toc_11">Q: 披萨小助手的工作原理是什么？</h4>
 
@@ -1241,251 +1260,238 @@
 					米游社 / HoYoLAB 客户端应用（client app）会通过向米哈游 / Cognosphere
 					的服务器的后端请求游戏内的一些资讯。这个手段可以查询到一些与此有关的游戏状态资讯（比如玩家体力的回满进度，等）。披萨小助手使用您的
 					UID 与 Cookie 资讯可以重复这个查询过程、代替您使用这两款 App
-					向对应的服务器的后端请求游戏内的这些资讯、并展示于披萨小助手的主界面与小工具当中。《披萨小助手隐私政策》已经解释了与这些
+					向对应的服务器的后端请求游戏内的这些资讯、并展示于披萨小助手的主界面与小工具当中。《披萨小助手隐私政策》已经解釋了与这些
 					Cookies 的使用有关的内容。
 				</p>
 
-				<h4 id="toc_12">Q: 未来会收费吗？</h4>
+				<h4 id="toc_12">Q: 将来的に料金が発生することはございますか？</h4>
 
 				<p>
-					米哈游不允许收费或植入收费广告，所以披萨小助手的所有功能都是免费提供开放使用的。
+					miHoYoは課金や広告の埋め込みを許可していないため、ピザ助手のすべての機能は無料で利用できます。
 				</p>
 
 				<p>
-					披萨小助手曾经接受过来自用户的自发捐赠（目前不再接受捐赠），且敝团队不会因此对捐赠者产生任何义务。这类捐赠内容会用于
-					App 开发、及其连带网络设施的维护。当然，通过 Apple App Store
-					发行软件所必须的 Apple Developer Program
-					会员身分的年费也会从这笔捐赠金报销。如有收到大宗捐赠的话，敝团队可能会公示他们的贡献。敝团队也可能会考虑在适当的时间点将用不完的经费捐赠给社会公益之用途。
+					ピザ助手は使用者からの任意の寄付を受け入れていましたが、開発チームは寄付者に対して義務を負いません。これらの寄付はアプリの開発や関連するネットワークインフラの維持に使用されます。もちろん、Apple
+					Developer
+					Programメンバーシップの年間費用もこの寄付金から支払われます。大きな寄付を受けた場合、チームは寄付者を公に認めることがございます。チームはまた、適切なタイミングで未使用の寄付金を慈善団体に寄付することを検討することがございます。
 				</p>
 
 				<h4 id="toc_13">
-					Q: 小工具（小组件）是怎样自动更新玩家的账号的原粹树脂 / 开拓力 /
-					绝区电量状态的？
+					Q:
+					ウィジェットはどのようにしてプレイヤーのアカウントステータス（天然樹脂、開拓力、ZZZエネルギー）を自動更新しますか？
 				</h4>
 
 				<p>
-					这些在披萨小助手被统称为「玩家体力（Stamina）」。从 5.0.4
-					版开始，披萨小助手的小工具每过一个玩家体力点恢复时间就会尝试向米游社 /
-					HoYoLAB 服务器请求一次最新的实时便笺资料（里面包括了对应 UID
-					的原粹树脂 / 开拓力 /
-					绝区电量状态等资讯）。桌面小工具额外会有用于重载内容专用的刷新按钮。开启披萨小助手本体
-					App
-					时，所有小工具都会自动重新请求一次实时便笺资料。如果您未曾登入游戏消耗过玩家体力的话，理论上通过小工具显示的玩家体力的误差不会超过
-					1。
+					これらはピザ助手内で「プレイヤースタミナ」として総称されます。バージョン5.0.4以降、ウィジェットは「1点ごとのスタミナの回復に要る時間」ごとに米遊社
+					/
+					HoYoLABサーバーから2時間ごとにリアルタイムデータをリクエストしようと試みます（対応するUIDの天然樹脂、開拓力、ZZZエネルギーステータスを含む）。デスクトップウィジェットには、コンテンツを再読み込みするためのリフレッシュボタンも含まれています。ピザ助手アプリを開くと、すべてのウィジェットは自動的にリアルタイムデータを再リクエストします。ゲーム内でスタミナを消費していない場合、ウィジェットに表示されるスタミナの差異は1を超えることはございません。
 				</p>
 
 				<p>
-					然而，对于3年以上的旧款iPhone机种来讲，哪怕有更换过新的电池，上述的小工具运作规律也会增加电力的消耗。因此，请在使用这类机种时尽量控制小工具的数量。
+					ところが、３年以上古い iPhone
+					機種には、たとえ電池が新品交換したとしても、上記のウィジェットの稼働パターンは電力の消耗の負担が掛かりますので、このような機種をお持ちしている方はできる限りウィジェットの数をお控えくださいませ。
 				</p>
 
 				<h4 id="toc_14">
-					Q: 开发团队的自我介绍呢？如何解决其他疑问和讨论其他话题？
+					Q:
+					開発チームについてもっと知りたい、または他のトピックについて話し合いたいですか？
 				</h4>
 
 				<p>
-					各位可以在披萨小助手的「关于」画面找到披萨小助手的 QQ 频道和 Discord
-					频道。从 2023 年四月开始，开发团队变成了三个人（Lava; Bill Haku; Shiki
-					Suen）。各位可以在「关于」画面的右上角点一下「开发组」就能看到他们的联络资料。
+					開発チームのQQチャンネルやDiscordチャンネルは、ピザ助手の「設定」セクションにございます。2023年4月から、開発チームは3人のメンバー（Lava、Bill
+					Haku、Shiki
+					Suen）で構成されています。「設定」セクションの右上隅にある「開発チーム」をクリックすると、彼らの連絡先情報を見ることができます。
 				</p>
 
-				<h4 id="toc_15">
-					Q: 请问何时会实作与绝区零有关的进阶功能？比如抽卡记录管理之类的。
-				</h4>
-
-				<p>
-					至少一年内不会实作。原因有很多，但开发团队分身乏术也是重要原因之一。
-				</p>
-
-				<h2 id="toc_16">// 技术故障与使用方法</h2>
+				<h2 id="toc_15">// 技術的な問題と使い方について</h2>
 
 				<blockquote>
-					本章节内容以披萨小助手 5.0.5 版开始的版本为讨论情形。
+					このセクションでは、ピザ助手（無印）バージョン5.2.1以降の問題について説明します。
 				</blockquote>
 
-				<h4 id="toc_17">
-					Q: HoYoLAB / 米游社面板相对于 Enka 面板而言有何差异？
+				<h4 id="toc_16">
+					Q: HoYoLAB / 米遊社のキャラビルド情報は Enka
+					のキャラビルド情報と比べば？
 				</h4>
 
 				<p>
-					Enka 面板的结果理论上是最准确的结果，但只能显示某个 UID
-					的公开展柜内的角色；而 HoYoLAB /
-					米游社面板则允许您以近乎相同的面板阅读体验来检视自己全部的在库角色。
+					Enka のキャラビルド情報は一番正しいとは言えますが、該当 UID
+					のショーケースで公開済みのキャラクター情報には限られております。一方、HoYoLAB
+					/ 米遊社のキャラビルド情報には該当 UID
+					の有する全てのキャラのビルド情報が含まれております。
 				</p>
 
-				<p>
-					由于后者可提供的后端资料有限，所以 HoYoLAB /
-					米游社面板内容有下述限制：
-				</p>
+				<p>HoYoLAB / 米遊社のキャラビルド情報には下記の制限はございます：</p>
 
 				<ul>
 					<li>
-						星穹铁道的武器在 20 &amp; 30 &amp; 40 &amp; 50 &amp; 60 &amp; 70
-						级时没有任何办法判断是否有经过等级突破，只能以「尚未完成等级突破」为前提来推断此时的武器面板数据。
+						スターレイルでの武器（光円錐）のレベルは 20・30・40・50・60・70
+						の時に、該当武器はレベル突破済みかどうかとは判断できませんので、「レベル未突破」を仮りの前提として武器の推測ビルド情報を表示するようにしました。
 					</li>
 					<li>
-						原神的部分角色可能会有「忘记统计某些角色自身突破所带来的特定元素的伤害增幅」的情况，届时请以「在游戏内将该角色移出队伍之后、游戏内显示的该角色的面板」为基准、来决定是否向
-						HoYoLAB / 米游社提报相关故障。
-
-						<ul>
-							<li>
-								注意：不将该角色移出队伍的话，队伍内不同的角色组合、乃至个别角色的天赋都有可能影响到游戏内显示的队员们的面板数值。
-							</li>
-						</ul>
+						原神の一部のキャラの元素傷害増幅情報の合計結果には、キャラ自身のレベル突破による元素傷害増幅数値が含まれていないことは、一部のキャラには発生しております。従って、ゲーム内の該当キャラが「チームにはいない」状態での「ゲーム内で見えるビルド情報」をご準拠くださいませ。なお、「チーム内部のキャラたちはそれぞれの組み合わせ或いは天賦の影響のため、それぞれのビルド情報は変化している」とご注意くださいませ。
 					</li>
 					<li>
-						原神的查询结果无法将角色技能基础等级与命座天赋等级加成分开统计，因为拿到的原始数值就是经过合算的最终技能等级。
+						原神でのキャラの天賦レベルはサーバーからの合計結果であり、「命の星座からどの天賦のレベルに影響を与えたか」とは判断できません。
 					</li>
 				</ul>
 
-				<h4 id="toc_18">
-					Q: iOS 锁屏小工具（小组件）无法加载出内容，怎么解决？
+				<h4 id="toc_17">
+					Q:
+					iOSのロック画面ウィジェットがコンテンツを読み込まない。どうすれば修正できますか？
 				</h4>
 
 				<p>
-					这有很大概率是小工具卡在资料获取状态了。可以进入锁屏小工具编辑状态，编辑对应的小工具的内容，重新选择本地账号（哪怕选择的还是之前的本地账号），这样可以触发锁屏小工具的内容更新流程。
+					これは、ウィジェットがデータ取得状態で固まっている可能性がございます。ロック画面ウィジェットの編集モードに入り、ウィジェットの内容を変更し、ローカルプロファイルを再選択してください（前のものと同じでも構いません）。これにより、コンテンツの更新過程がトリガーされます。
 				</p>
 
-				<h4 id="toc_19">Q: Apple Watch 无法从 iCloud 同步账号？</h4>
+				<h4 id="toc_18">
+					Q: Apple WatchがiCloudからアカウントを同期できません？
+				</h4>
 
 				<p>
-					以 iOS 18 为例：先关闭披萨小助手的 iCloud
-					同步功能、再重新打开，并进入披萨小助手的本体应用、再静置一分钟，随后打开
-					Apple Watch App 尝试同步即可。具体操作方法为：在 iPhone
-					上点按「设定」-「你的 Apple 账号」-「iCloud」-「储存至
-					iCloud」，然后把页面往下翻，找到披萨小助手的开关，关掉之后再重新点开就可以了。
+					iOS
+					18の場合：まず、ピザ助手のiCloud同期機能をオフにし、再度オンにします。その後、ピザ助手アプリを開いて1分ほど放置し、Apple
+					Watchアプリを通じて同期を試みてください。さらにサポートが必要な場合は、Apple
+					Supportにお問い合わせください。
 				</p>
 
-				<h4 id="toc_20">Q: 尝试添加小工具（小组件）时，找不到小工具。</h4>
+				<h4 id="toc_19">Q: ウィジェットを追加しようとすると見つからない？</h4>
 
 				<p>
-					请尝试重新启动系统后静置十分钟、不行的话再试试关闭再打开披萨小助手的通知，有较大概率解决。如果您在用
-					macOS 的且这样做之后该问题仍旧存在的话，请洽 Apple Support
-					让他们的专员引导您确认 App
-					是否被安装到了正确的位置、或者在不同的位置有重复安装。
+					システムを再起動し、10分ほど待ってください。それでも解決しない場合は、ピザ助手の通知をオフにした後、再度オンにしてみてください。これで問題が解決する可能性が高いです。macOSで問題が解決しない場合は、Apple
+					Supportに連絡して、アプリが正しい場所にインストールされているか、重複してインストールされていないか確認してください。
+				</p>
+
+				<h4 id="toc_20">
+					Q:
+					エラーコード-1（データが取得できない）または10102、10103、10104（クッキーとUIDの不一致）
+				</h4>
+
+				<p>
+					米遊社またはHoYoLABでリアルタイム便箋機能が有効になっているか確認し、新しいクッキーを取得してください。また、ログインしているアカウントが正しいことを確認してください。
 				</p>
 
 				<h4 id="toc_21">
-					Q: 错误码 -1（未获取到数据）或 错误码 10102、10103、10104（Cookie 与
-					UID 不对应）
+					Q: エラーコード10001（クッキーエラーまたはクッキーの期限切れ）
 				</h4>
 
 				<p>
-					检查是否开启米游社的实时便笺（或 HoYoLAB 的实时便笺）功能，并重新获取
-					Cookie。另请注意登入的账号本身是否正确。
+					対応するローカルプロファイルで再度ログインすることをお勧めします。この過程で新しいクッキーが取得されます。
 				</p>
 
-				<h4 id="toc_22">Q: 错误码 10001 （Cookie 有误或 Cookie 失效）</h4>
-
-				<p>建议将对应的本地账号重新登入。这个过程会重新获取 Cookie。</p>
-
-				<h4 id="toc_23">Q: 错误码 1008（UID 有误）</h4>
+				<h4 id="toc_22">Q: エラーコード1008（UIDエラー）</h4>
 
 				<p>
-					检查 UID
-					是否与您选择的服务器彼此对应（注意：是原神/星穹铁道/绝区零的UID，不是米游社通行证账号的
-					ID 数字）。如无法解决，请向我们反馈。另：披萨小助手自从 v5.0
-					版本开始，会在通过本地账号管理画面输入 UID
-					时自动尝试判定所属的服务器。
+					UIDが選択したサーバーに対応しているか確認してください（注意：これは『原神』
+					/ 『スターレイル』 /
+					『ゼンレスゾンゼロ』のUIDであり、米遊社アカウント・HoYoLABアカウントのID番号ではございません）。問題が解決しない場合は、報告してください。バージョン5.0以降、ピザ助手はローカルプロファイル管理画面でUIDを入力する際にサーバーを自動的に判定しようとします。
 				</p>
 
-				<h4 id="toc_24">Q: 受米游社管辖的 UID 该如何自备设备指纹？</h4>
+				<h4 id="toc_23">
+					Q: UID
+					は米遊社在籍の場合、追加情報を受け取るための特殊なデバイス指紋をどのように準備すればよいか？
+				</h4>
+
+				<p>（この質問は、HoYoLAB在籍のUIDとは無関係です。）</p>
 
 				<p>
-					该功能需要对 iOS 版米游社 App
-					与米哈游服务器之间的通讯进行流量监听、获取
-					<code>x-rpc-device_fp</code>
-					字段。这种工具会为系统新增本地虚拟专用网络、来完成流量监听。
+					この機能は、iOS版米遊社アプリと株式会社米哈遊のサーバー間の通信を監視し、特に<code>x-rpc-device_fp</code>フィールドのデータ値を取得する必要があります。このようなツールは、通信監視を有効にするためにシステムにローカル仮想専用ネットワーク（VPN）を作成します。
 				</p>
 
 				<p>
-					目前的唯一解决方案是由用户自己使用专门的流量监听工具来完成抓包工作。这里推荐
-					Stream Lab Inc. 开发的「Stream」这款专门用来抓包的 iOS 应用。
+					現在の唯一の解決策は、使用者自身が専門的な通信監視ツールを使用してパケットキャプチャを行うことです。ここでは、Stream
+					Lab
+					Inc.が開発したiOS専用のパケットキャプチャアプリ「Stream」を推奨します。
 				</p>
 
 				<p>
-					因为抓到的内容属于个人资讯，所以需要用户亲自完成。抓到的自己的设备的指纹也请仅供自己使用。
+					キャプチャした内容は個人情報です。使用者ががご自身のデータをキャプチャし、ご自身だけで用いることを推奨します。
 				</p>
 
-				<h4 id="toc_25">Q: 该怎样处理 Paimon.moe 的抽卡记录格式？</h4>
+				<h4 id="toc_24">
+					Q: Paimon.moeのガチャ記録フォーマットはどう処理すればよいか？
+				</h4>
 
 				<p>
-					由于该网站提供的 Excel 抽卡记录格式缺失了太多关键资讯栏位（都是 UIGFv4
-					规定的），我们在此前针对原神披萨小助手实装 UIGFv4
-					支持的时候就已经彻底放弃了对 Paimon.moe 的私有 Excel
-					格式的支持。如果您有将资料读入披萨小助手等 UIGFv4
-					标准的应用内的需求，请向 Paimon.moe 提出建议。
+					当該サイトが提供するExcel形式のガチャ記録フォーマットには、UIGFv4規定に従った重要な情報欄が不足しているため、この前「原神ピザ助手」にはUIGFv4対応を実装した際に、Paimon.moeの独自Excelフォーマットのサポート機能を完全に放棄しました。この機能は現在の「ピザ助手（無印）」にも実装されていません。当該サイトのガチャ記録データをUIGFv4標準に対応するアプリに読み込む必要がある場合は、Paimon.moeには「UIGFv4で記録を書き出す機能を実装なさる」よう、ご要求くださいませ。
+				</p>
+
+				<h4 id="toc_25">
+					Q: 「星穹鉄道 UID」および「HoYoLABがホストする原神UID」のガチャ記録
+					URL をどのように取得すればよいか？
+				</h4>
+
+				<p>
+					この機能は、これらのゲームクライアント（米哈遊のクラウドゲームを含む）と米哈遊サーバー間の通信を監視し、特定のフィールドやドメインを含むURLを検出する必要があります。このツールは、通信監視を有効にするためにシステムにローカル仮想専用ネットワーク（VPN）を作成します。
+				</p>
+
+				<p>
+					現在の唯一の解決策は、使用者が専門的な通信監視ツールを使用してパケットキャプチャを行うことです。
+				</p>
+
+				<ul>
+					<li>
+						iOSを使用している場合は、Stream Lab
+						Inc.が開発した「Stream」というiOSアプリを推奨します。
+					</li>
+					<li>
+						WindowsおよびmacOSのパケットキャプチャツールは多すぎるため、詳細は省略します。
+					</li>
+				</ul>
+
+				<p>
+					パケットキャプチャのルールは、「<code>/api/getGachaLog</code>」パスを含むすべてのURLを検出することです。異なるゲーム地域のガチャURLのドメインはすべて「<code>public-operation</code>」で始まります：
+				</p>
+
+				<ul>
+					<li>
+						米遊社在籍のUIDのガチャURLのドメインは、<code>mihoyo.com</code>で終わります。
+					</li>
+					<li>
+						HoYoLAB在籍のUIDのガチャURLのドメインは、<code>hoyoverse.com</code>で終わります。
+					</li>
+				</ul>
+
+				<p>
+					パケットキャプチャ時には、使用者が通信監視を有効にした状態で、ゲーム内のガチャ記録ページ（祈願／跳躍記録）を開く必要があります。
+				</p>
+
+				<p>
+					キャプチャしたURLの有効期限は1〜2時間しかない可能性があるため、できるだけお早めにご使用くださいませ。
+				</p>
+
+				<p>
+					キャプチャしたURLなどのものは個人情報です。他者と共有するかどうかは慎重に検討してください。
 				</p>
 
 				<h4 id="toc_26">
-					Q: 该怎样针对「星穹铁道 UID」以及「受 HoYoLAB 管辖的原神
-					UID」获取抽卡记录 URL？
+					Q: なぜ、iOS
+					デバイスを再起動するたびにローカルプロファイルが消えてしまうのですか？約
+					30 秒後に戻る場合もありますが、それでも煩わしいです。
 				</h4>
 
 				<p>
-					该功能需要对这些游戏客户端（包括米哈游的云游戏）与米哈游服务器之间的通讯进行流量监听、筛选任何包含特定字段与域名的网址。这种工具会为系统新增本地虚拟专用网络、来完成流量监听。
-				</p>
-
-				<p>
-					目前的唯一解决方案是由用户亲自使用专门的流量监听工具来完成抓包工作。
-				</p>
-
-				<ul>
-					<li>
-						如果您用的是 iOS 的话，这里推荐 Stream Lab Inc.
-						开发的「Stream」这款专门用来抓包的 iOS 应用。
-					</li>
-					<li>Windows 与 macOS 系统的抓包工具太多，不作赘述。</li>
-				</ul>
-
-				<p>
-					抓包规则就是筛选所有包含「<code>/api/getGachaLog</code>」路径内容的
-					URL。不同游戏的不同区服的抽卡网址的域名均以「<code>public-operation</code>」开头：
-				</p>
-
-				<ul>
-					<li>
-						受米游社管辖的 UID 的抽卡网址的域名均以
-						<code>mihoyo.com</code> 结尾。
-					</li>
-					<li>
-						受 HoYoLAB 管辖的 UID 的抽卡网址的域名均以
-						<code>hoyoverse.com</code> 结尾。
-					</li>
-				</ul>
-
-				<p>
-					抓包时需要用户在开启流量监听状态的情况下打开游戏内的抽卡记录（祈愿/跃迁记录）页面。
-				</p>
-
-				<p>您抓取的网址的有效期可能只有一到两个小时，请尽快使用。</p>
-
-				<p>
-					您抓取到的网址与资料属于您的个人隐私，请慎重考虑是否将相关数据分享给其他人。
-				</p>
-
-				<h4 id="toc_27">
-					Q: 为什么每次重新启动我的 iOS 设备后，本地账号都会消失？虽然大约 30
-					秒后可能会恢复，但仍然让人感到困扰。
-				</h4>
-
-				<p>
-					披萨小助手预设使用「群组容器」来存储本地账号（且有专供小工具存取的
-					UserDefaults 镜照副本）。如果您遇到此问题，可以按照以下步骤操作：
+					このアプリは、デフォルトでローカルプロファイルをグループコンテナに保存します（ウィジェットのためのUserDefaultsでの複写コピーも行っております）。この問題が発生した場合は、以下の手順を実行してください：
 				</p>
 
 				<ol>
 					<li>
-						前往「本地账号管理器 -&gt;
-						选单（位于界面右上角）」并使用相关选单选项将所有本地账号导出为备份文件。在完成步骤
-						2 后，您需要使用此备份文件将本地账号重新导入到披萨小助手内。
+						「ローカルプロファイルマネージャー -&gt; メニュー（UI
+						の右上）」で関連するメニューオプションを使用して、すべてのローカルプロファイルをバックアップファイルとして書き出してください。ステップ
+						2
+						を完了した後、このバックアップファイルを使用してローカルプロファイルをアプリに再び読み込む必要があります。
 					</li>
 					<li>
-						在相同的选单中，进入「进阶选项」并将「本地账号存储位置」切换为「应用程序容器」。切换此选项后，披萨小助手会自动退出。
+						同じメニュー内の「上級設定」-&gt;「ローカルプロファイルのストレージ場所」を「アプリコンテナ」に切り替えます。このオプションを切り替えると、アプリは自動的に終了します。
 					</li>
-					<li>将本地账号导入到披萨小助手内。此选项位于步骤 1 所述的选单中。</li>
+					<li>
+						ローカルプロファイルをアプリに再インポートしてください。このオプションは、ステップ
+						1 で述べた同じメニューにあります。
+					</li>
 				</ol>
 
-				<p>这是针对此问题的一个经过验证的解决方法。</p>
+				<p>これは、この問題に対する実証済みの回避策です。</p>
 
 				<p>$ EOF.</p>
 			</div>
@@ -1625,7 +1631,7 @@
 						<p>
 							<strong>ウィジェット</strong
 							>：『ピザ助手（無印）』では、『原神』専用のウィジェットも『スターレイル』のコンテンツを表示できるようになりました（洞天集宝盆などの『原神』固有のウィジェットは除く）。ウィジェット設定で『スターレイル』用のローカルプロファイルを選択してください。iOSの組み込みLive
-							Activity機能を使って実装されたスタミナタイマーも、『スターレイル』での開拓力の補充状況を表示するために使用できます。ウィジェットのカスタム背景サポートは一時的に遅れる可能性があり、条件によって後で実装される予定です。
+							Activity機能を使って実装されたスタミナタイマーも、『スターレイル』での開拓力の補充状況を表示するために使用できます。ウィジェットのユーザーカスタム背景サポートはv5.2.1アップデートにて再びサポートし始めましたが、旧版のアプリのこの設定の引き継ぎは無理です。この機能についてのUI文字説明をご参考くださいませ。
 						</p>
 					</li>
 				</ol>
@@ -1680,7 +1686,7 @@
 				<h2 id="toc_15">// 技術的な問題と使い方について</h2>
 
 				<blockquote>
-					このセクションでは、ピザ助手（無印）バージョン5.0.5以降の問題について説明します。
+					このセクションでは、ピザ助手（無印）バージョン5.2.1以降の問題について説明します。
 				</blockquote>
 
 				<h4 id="toc_16">
@@ -1763,7 +1769,8 @@
 				</p>
 
 				<h4 id="toc_23">
-					Q: UID は米遊社在籍の場合、追加情報を受け取るための特殊なデバイス指紋をどのように準備すればよいか？
+					Q: UID
+					は米遊社在籍の場合、追加情報を受け取るための特殊なデバイス指紋をどのように準備すればよいか？
 				</h4>
 
 				<p>（この質問は、HoYoLAB在籍のUIDとは無関係です。）</p>
