Repo // i18n: Fix Japanese translations regarding "import/export".
- Abusing loan words is not acceptable if equivalent native Japanese expressions are available.

--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
@@ -1866,7 +1866,7 @@
 					</li>
 				</ul>
 				<p>
-					ピザ助手は使用者がガチャ記録をインポートおよびエクスポートできるようにしていますが、開発チームはこれらの記録を「勝手に統計結果を公開する第三者とそのウェブサイト」に共有することを推奨していません。
+					ピザ助手は使用者がガチャ記録をインポート（読み込み）およびエクスポート（書き出し）できるようにしていますが、開発チームはこれらの記録を「勝手に統計結果を公開する第三者とそのウェブサイト」に共有することを推奨していません。
 				</p>
 				<h4>
 					<a
