PublicDocs // Update FAQ.

--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
@@ -394,6 +394,27 @@
 						Spiral Abyss Top Lists.
 					</li>
 				</ul>
+				<h4>
+					<a
+						id="q-after-upgrading-this-app-from-the-app-store-why-have-many-features-disappeared-now-only-the-data-export-function-remains"
+						class="anchor"
+						aria-hidden="true"
+						><span class="octicon octicon-link"></span></a
+					>Q: After upgrading this app from the App Store, why have many
+					features disappeared? Now only the data export function remains?
+				</h4>
+				<p>
+					Starting from v5.5.0 (v5.5.1 for watchOS app), this software has
+					reintroduced its installability for OS21 ~ OS23 (i.e., iOS 14 ~ 16 and
+					macOS 11 ~ 13) to replace deprecated legacy versions. This decision
+					was made due to security concerns in older versions (v4.x and earlier)
+					and our inability to address them through other means. Considering the
+					unique needs of OS23 users, we have backported some core features to
+					OS23 (iOS 16.2+, macOS 13.0+, watchOS 9.2+) and later. However,
+					SwiftUI remains highly unstable on these OS versions, which may cause
+					operational issues. If your usage requirements and budget permit,
+					please switch to a device supporting at least OS24+.
+				</p>
 				<h2>
 					<a id="app-and-development-team" class="anchor" aria-hidden="true"
 						><span class="octicon octicon-link"></span></a
@@ -952,6 +973,24 @@
 						有多種因素導致產品體驗永遠都無法做好、且沒有可維護性的功能。例：深境螺旋榜單。
 					</li>
 				</ul>
+				<h4>
+					<a
+						id="%E5%95%8F%EF%BC%9A%E7%82%BA%E4%BB%80%E9%BA%BC%E6%88%91%E5%9C%A8%E5%95%86%E5%BA%97%E5%8D%87%E7%B4%9A%E9%80%99%E5%80%8B%E8%BB%9F%E9%AB%94%E5%BE%8C%EF%BC%8C%E5%BE%88%E5%A4%9A%E5%8A%9F%E8%83%BD%E5%8F%8D%E8%80%8C%E6%B6%88%E5%A4%B1%E4%BA%86%EF%BC%9F%E7%94%9A%E8%87%B3%E5%8F%AA%E5%89%A9%E5%8C%AF%E5%87%BA%E8%B3%87%E6%96%99%E7%9A%84%E5%8A%9F%E8%83%BD%EF%BC%9F"
+						class="anchor"
+						aria-hidden="true"
+						><span class="octicon octicon-link"></span></a
+					>問：為什麼我在商店升級這個軟體後，很多功能反而消失了？甚至只剩匯出資料的功能？
+				</h4>
+				<p>
+					自 5.5.0 版本起（watchOS App 則自 5.5.1 版本起），本軟體恢復了對 OS21
+					~ OS23（即 iOS 14 ~ 16 與 macOS 11 ~
+					13）的安裝支援，以取代已被棄用的舊版。此決策源於舊版（v4.x
+					及更早版本）存在資安疑慮，且我們無法透過其他手段介入處理。考量到 OS23
+					使用者群體的特殊性，我們仍為 OS23（iOS 16.2+/macOS 13.0+/watchOS
+					9.2+）以上使用者移植了部分基礎功能。但 SwiftUI
+					在這些系統版本中仍極不成熟，難免存在使用故障。若您的使用需求與經濟能力允許，請更換至少支援
+					OS24+ 的設備。
+				</p>
 				<h2>
 					<a
 						id="app%E8%88%87%E9%96%8B%E7%99%BC%E5%9C%98%E9%9A%8A"
@@ -1428,6 +1467,25 @@
 						有多种因素导致产品体验永远都无法做好、且没有可维护性的功能。例：深境螺旋榜单。
 					</li>
 				</ul>
+				<h4>
+					<a
+						id="q%E4%B8%BA%E4%BB%80%E4%B9%88%E6%88%91%E5%9C%A8%E5%95%86%E5%BA%97%E5%8D%87%E7%BA%A7%E4%BA%86%E8%BF%99%E4%B8%AA%E8%BD%AF%E4%BB%B6%E4%B9%8B%E5%90%8E%EF%BC%8C%E5%BE%88%E5%A4%9A%E5%8A%9F%E8%83%BD%E5%8F%8D%E8%80%8C%E4%B8%8D%E8%A7%81%E4%BA%86%EF%BC%9F%E7%94%9A%E8%87%B3%E5%8F%AA%E6%9C%89%E5%AF%BC%E5%87%BA%E8%B5%84%E6%96%99%E7%9A%84%E5%8A%9F%E8%83%BD%EF%BC%9F"
+						class="anchor"
+						aria-hidden="true"
+						><span class="octicon octicon-link"></span></a
+					>Q:
+					为什么我在商店升级了这个软件之后，很多功能反而不见了？甚至只有导出资料的功能？
+				</h4>
+				<p>
+					本软件从 5.5.0 开始（watchOS App 则自 5.5.1 版本开始）恢复了对
+					OS21 ~ OS23 (也就是 iOS 14 ~ 16 和 macOS 11 ~ 13)
+					的可安装性，借此替换掉那些被放弃维护的旧版。这个决定是因为旧版（v4.x
+					为止的版本）有一些与资讯安全有关的疑虑、且我们没有其他手段可以干预。考虑到
+					OS23 用户群体的特殊性，我们仍向下移植了一些基础功能给 OS23 (iOS 16.2+,
+					macOS 13.0+, watchOS 9.2+) 开始的用户使用。但 SwiftUI
+					在这些版本的系统内仍旧非常不成熟，难免会有使用上的故障。如果您的使用需求情形与经济能力允许的话，请换用至少支持
+					OS24+ 的设备。
+				</p>
 				<h2>
 					<a
 						id="app%E4%B8%8E%E5%BC%80%E5%8F%91%E5%9B%A2%E9%98%9F"
@@ -1911,6 +1969,22 @@
 						深境螺旋ランキングなど、ユーザー体験の課題が解決できない機能。
 					</li>
 				</ul>
+				<h4>
+					<a
+						id="q-app-store%E3%81%A7%E3%81%93%E3%81%AE%E3%82%BD%E3%83%95%E3%83%88%E3%82%92%E3%82%A2%E3%83%83%E3%83%97%E3%82%B0%E3%83%AC%E3%83%BC%E3%83%89%E3%81%97%E3%81%9F%E5%BE%8C%E3%80%81%E3%81%AA%E3%81%9C%E5%A4%9A%E3%81%8F%E3%81%AE%E6%A9%9F%E8%83%BD%E3%81%8C%E6%B6%88%E3%81%88%E3%81%9F%E3%81%AE%E3%81%A7%E3%81%99%E3%81%8B%EF%BC%9F%E3%83%87%E3%83%BC%E3%82%BF%E3%81%AE%E3%82%A8%E3%82%AF%E3%82%B9%E3%83%9D%E3%83%BC%E3%83%88%E6%A9%9F%E8%83%BD%E3%81%97%E3%81%8B%E6%AE%8B%E3%81%A3%E3%81%A6%E3%81%84%E3%81%BE%E3%81%9B%E3%82%93%E3%80%82"
+						class="anchor"
+						aria-hidden="true"
+						><span class="octicon octicon-link"></span></a
+					>Q: App Store
+					でこのソフトをアップグレードした後、なぜ多くの機能が消えたのですか？データのエクスポート機能しか残っていません。
+				</h4>
+				<p>
+					バージョン5.5.0以降（watchOSアプリは5.5.1以降）、当アプリはOS21～OS23（iOS
+					14～16およびmacOS
+					11～13）へのインストールを再サポートし、メンテナンスが終了した旧版を置き換えます。この決定は、旧版（v4.x以前）に存在するセキュリティ上の懸念事項への介入手段が他にないためです。OS23ユーザー層の特殊性を考慮し、OS23（iOS
+					16.2+/macOS
+					13.0+/watchOS9.2+）以降のユーザー向けに一部基本機能を移植しました。ただしSwiftUIはこれらのシステムバージョンでは未成熟であり、動作障害が発生する可能性があります。使用ニーズと経済状況が許す場合は、OS24+以上をサポートするデバイスへの切り替えをお願いします。
+				</p>
 				<h2>
 					<a
 						id="%E3%82%A2%E3%83%97%E3%83%AA%E3%81%A8%E9%96%8B%E7%99%BA%E3%83%81%E3%83%BC%E3%83%A0"
