i18n // Optimizing Japanese localization.

--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
@@ -2294,7 +2294,7 @@
 						同じメニュー内の「上級設定」-&gt;「ローカルプロファイルのストレージ場所」を「アプリコンテナ」に切り替えます。このオプションを切り替えると、アプリは自動的に終了します。
 					</li>
 					<li>
-						ローカルプロファイルをアプリに再インポートしてください。このオプションは、ステップ
+						ローカルプロファイルをアプリに再びお読み込みください。このオプションは、ステップ
 						1 で述べた同じメニューにあります。
 					</li>
 				</ol>
