i18n // ja: Optimization, continued.

--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
@@ -2014,7 +2014,7 @@
 					<li>
 						<p>
 							<strong>ウィジェット</strong
-							>：『ピザ助手（無印）』では、『原神』専用のウィジェットも『スターレイル』のコンテンツを表示できるようになりました（洞天集宝盆などの『原神』固有のウィジェットは除く）。ウィジェット設定で『スターレイル』用のローカルプロファイルを選択してください。iOSの組み込みLive
+							>：『ピザ助手（無印）』では、『原神』専用のウィジェットも『スターレイル』のコンテンツを表示できるようになりました（洞天集宝盆などの『原神』固有のウィジェットは除く）。ウィジェット設定で『スターレイル』用のプロファイルを選択してください。iOSの組み込みLive
 							Activity機能を使って実装されたスタミナタイマーも、『スターレイル』での開拓力の補充状況を表示するために使用できます。ウィジェットのユーザーカスタム背景サポートはv5.2.1アップデートにて再びサポートし始めましたが、旧版のアプリのこの設定の引き継ぎは無理です。この機能についてのUI文字説明をご参考くださいませ。
 						</p>
 					</li>
@@ -2130,7 +2130,7 @@
 					iOSのロック画面ウィジェットがコンテンツを読み込まない。どうすれば修正できますか？
 				</h4>
 				<p>
-					これは、ウィジェットがデータ取得状態で固まっている可能性がございます。ロック画面ウィジェットの編集モードに入り、ウィジェットの内容を変更し、ローカルプロファイルを再選択してください（前のものと同じでも構いません）。これにより、コンテンツの更新過程がトリガーされます。
+					これは、ウィジェットがデータ取得状態で固まっている可能性がございます。ロック画面ウィジェットの編集モードに入り、ウィジェットの内容を変更し、プロファイルを再選択してください（前のものと同じでも構いません）。これにより、コンテンツの更新過程がトリガーされます。
 				</p>
 				<h4>
 					<a
@@ -2179,7 +2179,7 @@
 					>Q: エラーコード10001（クッキーエラーまたはクッキーの期限切れ）
 				</h4>
 				<p>
-					対応するローカルプロファイルで再度ログインすることをお勧めします。この過程で新しいクッキーが取得されます。
+					対応するプロファイルで再度ログインすることをお勧めします。この過程で新しいクッキーが取得されます。
 				</p>
 				<h4>
 					<a
@@ -2192,7 +2192,7 @@
 				<p>
 					UIDが選択したサーバーに対応しているか確認してください（注意：これは『原神』
 					/ 『スターレイル』 /
-					『ゼンレスゾンゼロ』のUIDであり、米遊社アカウント・HoYoLABアカウントのID番号ではございません）。問題が解決しない場合は、報告してください。バージョン5.0以降、ピザ助手はローカルプロファイル管理画面でUIDを入力する際にサーバーを自動的に判定しようとします。
+					『ゼンレスゾンゼロ』のUIDであり、米遊社アカウント・HoYoLABアカウントのID番号ではございません）。問題が解決しない場合は、報告してください。バージョン5.0以降、ピザ助手はプロファイル管理画面でUIDを入力する際にサーバーを自動的に判定しようとします。
 				</p>
 				<h4>
 					<a
@@ -2277,24 +2277,24 @@
 						aria-hidden="true"
 						><span class="octicon octicon-link"></span></a
 					>Q: なぜ、iOS
-					デバイスを再起動するたびにローカルプロファイルが消えてしまうのですか？約
+					デバイスを再起動するたびにプロファイルが消えてしまうのですか？約
 					30 秒後に戻る場合もありますが、それでも煩わしいです。
 				</h4>
 				<p>
-					このアプリは、デフォルトでローカルプロファイルをグループコンテナに保存します（ウィジェットのためのUserDefaultsでの複写コピーも行っております）。この問題が発生した場合は、以下の手順を実行してください：
+					このアプリは、デフォルトでプロファイルをグループコンテナに保存します（ウィジェットのためのUserDefaultsでの複写コピーも行っております）。この問題が発生した場合は、以下の手順を実行してください：
 				</p>
 				<ol>
 					<li>
-						「ローカルプロファイルマネージャー -&gt; メニュー（UI
-						の右上）」で関連するメニューオプションを使用して、すべてのローカルプロファイルをバックアップファイルとして書き出してください。ステップ
+						「プロファイルマネージャー -&gt; メニュー（UI
+						の右上）」で関連するメニューオプションを使用して、すべてのプロファイルをバックアップファイルとして書き出してください。ステップ
 						2
-						を完了した後、このバックアップファイルを使用してローカルプロファイルをアプリに再び読み込む必要があります。
+						を完了した後、このバックアップファイルを使用してプロファイルをアプリに再び読み込む必要があります。
 					</li>
 					<li>
-						同じメニュー内の「上級設定」-&gt;「ローカルプロファイルのストレージ場所」を「アプリコンテナ」に切り替えます。このオプションを切り替えると、アプリは自動的に終了します。
+						同じメニュー内の「上級設定」-&gt;「プロファイルのストレージ場所」を「アプリコンテナ」に切り替えます。このオプションを切り替えると、アプリは自動的に終了します。
 					</li>
 					<li>
-						ローカルプロファイルをアプリに再びお読み込みください。このオプションは、ステップ
+						プロファイルをアプリに再びお読み込みください。このオプションは、ステップ
 						1 で述べた同じメニューにあります。
 					</li>
 				</ol>
