GachaKit & FAQ // Continue amending recent commits.

--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
@@ -665,7 +665,7 @@
 
 			<p>可信度計算考慮了抽卡機制的複雜性，包括保底系統以及常駐物品與限定物品的區別，確保可靠性評估反映您資料的實際統計意義。</p>
 
-			<p>注意：即便「可信度高」，最終解釋權仍舊在米哈遊，且米哈遊對概率的計算方法也擁有最終解釋權、凌駕在敝軟體的計算方法之上。</p>
+			<p>注意：即使顯示「可信度高」，最終解釋權仍屬於米哈遊，米哈遊對概率計算方法也擁有最終解釋權、且優先於敝應用的計算方法。</p>
 
 			<p>$ EOF.</p>
 
@@ -890,7 +890,7 @@
 
 			<p>可信度计算考虑了抽卡机制的复杂性，包括保底系统以及常驻物品与限定物品的区别，确保可靠性评估反映您数据的实际统计意义。</p>
 
-			<p>注意：即便「可信度高」，最终解释权仍旧在米哈游，且米哈游对概率的计算方法也拥有最终解释权、凌驾在本软件的计算方法之上。</p>
+			<p>注意：即使显示「可信度高」，最终解释权仍属于米哈游，米哈游对概率计算方法也拥有最终解释权、且优先于本应用的计算方法。</p>
 
 			<p>$ EOF.</p>
 
@@ -1110,7 +1110,7 @@
 
 			<p>信憑度計算は、天井システムや通常アイテムと限定アイテムの区別を含むガチャメカニクスの複雑性を考慮に入れ、信頼性評価がデータの実際の統計的意義を反映することを保証します。</p>
 
-			<p>注意：「信憑度高」が出たとしても、最終的な解釈権は株式会社米哈遊にあり、米哈遊社は確率の計算方法についても最終的な解釈権を持ち、当アプリの計算方法よりも優先されます。</p>
+			<p>注意：「信憑度高」と表示されても、最終的な解釈権は株式会社米哈遊に帰属し、確率計算方法についても米哈遊社が最終的な解釈権を持ち、このアプリの計算方法を上回ります。</p>
 
 			<p>$ EOF.</p>
 
