--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/EULA.html
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/EULA.html
@@ -273,7 +273,7 @@
 
 				<hr />
 
-				<h3>**Article 1: Usage Rules**</h3>
+				<h4>Article 1: Usage Rules</h4>
 
 				<ol>
 					<li>
@@ -353,7 +353,7 @@
 				</ol>
 				<hr />
 
-				<h3>**Article 2: Privacy Protection**</h3>
+				<h4>Article 2: Privacy Protection</h4>
 
 				<p>
 					This application requires submitting the UID number to query the
@@ -427,7 +427,7 @@
 
 				<hr />
 
-				<h3>**Article 3: Trademarks and Intellectual Property**</h3>
+				<h4>Article 3: Trademarks and Intellectual Property</h4>
 
 				<ol>
 					<li>
@@ -442,7 +442,7 @@
 				</ol>
 				<hr />
 
-				<h3>**Article 4: Legal Liability and Disclaimer**</h3>
+				<h4>Article 4: Legal Liability and Disclaimer</h4>
 
 				<ol>
 					<li>
@@ -480,7 +480,7 @@
 				</ol>
 				<hr />
 
-				<h3>**Article 5: Data Authenticity and Liability**</h3>
+				<h4>Article 5: Data Authenticity and Liability</h4>
 
 				<ol>
 					<li>
@@ -518,7 +518,7 @@
 				</ol>
 				<hr />
 
-				<h3>**Article 6: Miscellaneous**</h3>
+				<h4>Article 6: Miscellaneous</h4>
 
 				<ol>
 					<li>
@@ -541,7 +541,7 @@
 				</ol>
 			</div>
 			<div id="content-zh-Hant" class="content active" lang="zh-Hant">
-				<h1>**披薩小助手使用者授權合約與免責聲明**</h1>
+				<h1>披薩小助手使用者授權合約與免責聲明</h1>
 
 				<blockquote>
 					本文件的所有翻譯版本僅供參考，唯有簡體中文原版具法律效力。
@@ -561,7 +561,7 @@
 
 				<hr />
 
-				<h3>第一條 使用規則</h3>
+				<h4>第一條 使用規則</h4>
 
 				<ol>
 					<li>
@@ -600,7 +600,7 @@
 				</ol>
 				<hr />
 
-				<h3>第二條 隱私保護</h3>
+				<h4>第二條 隱私保護</h4>
 
 				<p>
 					敝應用在藉由 Enka Networks 的公開查詢服務查詢指定 UID
@@ -652,7 +652,7 @@
 
 				<hr />
 
-				<h3>第三條 商標與智慧財產權</h3>
+				<h4>第三條 商標與智慧財產權</h4>
 
 				<ol>
 					<li>
@@ -661,7 +661,7 @@
 				</ol>
 				<hr />
 
-				<h3>第四條 法律責任與免責</h3>
+				<h4>第四條 法律責任與免責</h4>
 
 				<ol>
 					<li>
@@ -686,7 +686,7 @@
 				</ol>
 				<hr />
 
-				<h3>第五條 資料真實性與責任承擔</h3>
+				<h4>第五條 資料真實性與責任承擔</h4>
 
 				<ol>
 					<li>
@@ -706,7 +706,7 @@
 				</ol>
 				<hr />
 
-				<h3>第六條 其他條款</h3>
+				<h4>第六條 其他條款</h4>
 
 				<ol>
 					<li>
@@ -724,7 +724,7 @@
 				<hr />
 			</div>
 			<div id="content-zh-Hans" class="content" lang="zh-Hans">
-				<h1>**披萨小助手用户许可协议与免责声明**</h1>
+				<h1>披萨小助手用户许可协议与免责声明</h1>
 
 				<blockquote>
 					本文件的所有翻译版本仅供参考，唯有简体中文原版具有法律效力。
@@ -744,7 +744,7 @@
 
 				<hr />
 
-				<h3>第一条 使用规则</h3>
+				<h4>第一条 使用规则</h4>
 
 				<ol>
 					<li>
@@ -783,7 +783,7 @@
 				</ol>
 				<hr />
 
-				<h3>第二条 隐私保护</h3>
+				<h4>第二条 隐私保护</h4>
 
 				<p>
 					敝应用在借由 Enka Networks 的公开查询服务查询指定 UID
@@ -833,7 +833,7 @@
 
 				<hr />
 
-				<h3>第三条 商标与知识产权</h3>
+				<h4>第三条 商标与知识产权</h4>
 
 				<ol>
 					<li>
@@ -842,7 +842,7 @@
 				</ol>
 				<hr />
 
-				<h3>第四条 法律责任与免责</h3>
+				<h4>第四条 法律责任与免责</h4>
 
 				<ol>
 					<li>
@@ -867,7 +867,7 @@
 				</ol>
 				<hr />
 
-				<h3>第五条 数据真实性与责任承担</h3>
+				<h4>第五条 数据真实性与责任承担</h4>
 
 				<ol>
 					<li>
@@ -887,7 +887,7 @@
 				</ol>
 				<hr />
 
-				<h3>第六条 其他条款</h3>
+				<h4>第六条 其他条款</h4>
 
 				<ol>
 					<li>
@@ -905,7 +905,7 @@
 				<hr />
 			</div>
 			<div id="content-ja-JP" class="content" lang="ja">
-				<h1>**ピザ助手アプリ使用者許諾契約及び免責声明**</h1>
+				<h1>ピザ助手アプリ使用者許諾契約及び免責声明</h1>
 
 				<blockquote>
 					本書の全ての翻訳は参考のためのみ提供され、簡体字中国語の原本のみが法的効力を有す。
