--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
@@ -311,6 +311,16 @@
 
 			<p>These features won't be considered to implment in at least a year. There were too many reasons and concerns behind this decision, but one of them is that we are almost running out of our available time on this project.</p>
 
+			<h4>Q: Why does the app require restart after changing language settings?</h4>
+
+			<p>New UI language settings of an app on macOS / iOS always require the app to restart to make sure the new language setting becomes effective to it. Even if the user manually change this through System Settings, user will still be prompted the necessity of restarting the app, and it will be not this app but the macOS / iOS who prompts it.</p>
+
+			<p>We make this language switcher here to save users some seconds. This design is extremely ADHD-friendly since ADHD patients are likely to forgot what they are about to do while flipping among nested pages in iOS / macOS System Settings.</p>
+
+			<p>The app will automatically terminate once you confirm the language switch action, and you will need to manually launch it again.</p>
+
+			<p>Some features, such as System Notifications, Widgets, etc., require restarting Springboard (on iOS) or logging out and back in (on macOS) to apply changes to this setting. If this feels complex, you may simply reboot your device instead. Note that already-scheduled system notifications may not reflect the latest app language change.</p>
+
 			<h2>// Technical Issues and Know-How</h2>
 
 			<blockquote>
@@ -534,6 +544,16 @@
 			<h4>Q: 請問何時會實作與絕區零有關的進階功能？比如抽卡記錄管理之類的。</h4>
 
 			<p>至少一年內不會實作。原因有很多，但開發團隊分身乏術也是重要原因之一。</p>
+
+			<h4>Q: 為什麼更改語言設定後需要重啟應用程式？</h4>
+
+			<p>在 macOS/iOS 上更改應用程式的 UI 語言設定時，應用程式需要重新啟動，以確保新的語言設定生效。即使使用者藉由系統設定手動更改語言設定，仍然會提示需要重新啟動應用程式，且屆時這個提示將由 macOS/iOS 系統來發出，而非敝應用程式。</p>
+
+			<p>我們在這裡設置了語言切換器，以幫助使用者節省幾秒鐘的時間。這種設計對於有注意力缺陷渙散障礙（ADHD）患者非常友善，因為 ADHD 患者在翻閱 iOS/macOS 系統設定中的多層頁面時，往往容易徹底忘記他們原本要做的事情。</p>
+
+			<p>確認語言切換後，應用程式會自動結束，您需要手動重新啟動應用程式。</p>
+
+			<p>某些功能（如系統通知、小工具等）需要重新啟動 Springboard（在 iOS 上）或登出後重新登入（在 macOS 上）以套用此設定的變更。如果您覺得麻煩的話，您也可以選擇直接重新啟動系統。請注意，已排定的系統通知可能無法反映最新的 App 介面語言設定。</p>
 
 			<h2>// 技術故障與使用方法</h2>
 
@@ -760,6 +780,16 @@
 
 			<p>至少一年内不会实作。原因有很多，但开发团队分身乏术也是重要原因之一。</p>
 
+			<h4>Q: 为什么更改语言设定后需要重启应用程式？</h4>
+
+			<p>在 macOS/iOS 上更改 App 的 UI 语言设定时，App 需要重新启动，以确保新的语言设定生效。即使用户通过系统设定手动更改语言设定，仍然会提示需要重新启动 App，且届时这个提示将由 macOS/iOS 系统来发出，而非本 App。</p>
+
+			<p>我们在这里设定了语言切换器，以帮助用户节省几秒钟的时间。这种设计对注意力缺陷涣散障碍（ADHD）患者非常友好，因为 ADHD 患者在翻阅 iOS/macOS 系统设定中的多层页面时，往往容易彻底忘记他们原本要做的事情。</p>
+
+			<p>确认语言切换后，应用程式会自动退出，您需要手动重新启动应用程式。</p>
+
+			<p>某些功能（如系统通知、小工具等）需要重启 Springboard（在 iOS 上）或退出登录后重新登录（在 macOS 上）以应用此设定的变更。如果您觉得麻烦的话，您也可以直接重启设备。请注意，已排定的系统通知可能无法反映最新的 App 语言设定。</p>
+
 			<h2>// 技术故障与使用方法</h2>
 
 			<blockquote>
@@ -980,6 +1010,18 @@
 			<h4>Q: 開発チームについてもっと知りたい、または他のトピックについて話し合いたいですか？</h4>
 
 			<p>開発チームのQQチャンネルやDiscordチャンネルは、ピザ助手の「設定」セクションにございます。2023年4月から、開発チームは3人のメンバー（Lava、Bill Haku、Shiki Suen）で構成されています。「設定」セクションの右上隅にある「開発チーム」をクリックすると、開発チームメンバーたちの連絡先情報を見ることができます。生涯の計画はみんなそれぞれであるため、2024年10月からメンテナンスをする開発者は Shiki Suen 一人になりました。</p>
+
+			<h4>Q: なぜ言語設定変更後にアプリの再起動が必要なのですか？</h4>
+
+			<p>macOSやiOSにおいて、アプリの言語設定を変更した場合、新しい設定を有効にするにはアプリの再起動が必要です。</p>
+
+			<p>これは、ユーザーがOSのシステム設定から手動で変更した場合も同様で、その際には <strong>OS側</strong> から再起動を促すメッセージが表示されます。</p>
+
+			<p>アプリ内に言語切り替え機能を設けたのは、数秒でもユーザーの時間を節約するためです。特にADHD（注意力欠陥障害）の特性を持つ方にとって、このデザインは非常に利便性が高いと考えています。複雑なOSのシステム設定画面を行き来する間に、本来の目的を忘れてしまうことが少なくないからです。</p>
+
+			<p>言語切り替えを確認すると、アプリは自動的に終了し、手動で再起動する必要があります。</p>
+
+			<p>システム通知、ウィジェットなど一部の機能では、この設定の変更を適用するために、Springboardの再起動（iOSの場合）またはログアウトして再度ログイン（macOSの場合）が必要です。これが複雑に感じる場合は、代わりにデバイスを簡単に再起動することもできます。なお、すでにスケジュールされているシステム通知は、アプリの言語の最新の変更を反映しない場合があります。</p>
 
 			<h2>// 技術的な問題と使い方について</h2>
 
