PublicDocs // Add Copilot hooks to the HTML template.

--- a/EndUserPublicDocs/WebTemplate.html
+++ b/EndUserPublicDocs/WebTemplate.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>EULA</title>
+	<!-- [TO COPILOT] MODIFY THE TITLE TO MATCH THE DOCUMENT NAME (FAQ / EULA / PRIVACY POLICY). -->
+	<title>DOCUMENT NAME</title>
 	<style>
 		/* General reset */
 		* {
@@ -222,16 +223,16 @@
 	</header>
 	<main>
 		<div id="content-en-US" class="content" lang="en">
-
+			<!-- [TO COPILOT] en-US contents is expected to be inserted here. -->
 		</div>
 		<div id="content-zh-Hant" class="content active" lang="zh-Hant">
-
+			<!-- [TO COPILOT] zh-Hant (zh-TW) contents is expected to be inserted here. -->
 		</div>
 		<div id="content-zh-Hans" class="content" lang="zh-Hans">
-
+			<!-- [TO COPILOT] zh-Hans (zh-CN) contents is expected to be inserted here. -->
 		</div>
 		<div id="content-ja-JP" class="content" lang="ja">
-
+			<!-- [TO COPILOT] ja-JP contents is expected to be inserted here. -->
 		</div>
 	</main>
 </body>
