--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
@@ -770,11 +770,11 @@
 
 			<h2>// App 与开发团队</h2>
 
-			<h4>Q: 我是胡桃工具箱（Snap Hutao）的使用者，请問在迁移到本應用時需要注意什麼？這個 App 會像 Snap Hutao 那樣被迫終止服務嗎？</h4>
+      <h4>Q: 我是胡桃工具箱（Snap Hutao）的使用者，请问在迁移到本应用时需要注意什么？这个 App 会像 Snap Hutao 那样被迫终止服务吗？</h4>
 
 			<p>要导入 Snap Hutao 的难民数据，请在抽卡记录管理器中选择 UIGFv4 格式并加载 Snap Hutao 的 <code>Userdata.db</code> 数据库（由 Entity Framework Core 生成的 SQLite 数据库）。应用会读取该数据库并将所有抽卡记录转换为 UIGFv4 格式后导入。披萨小助手无法继承 Snap Hutao 的本地账号数据，您需要手动重新设定本地账号。</p>
 
-			<p>开发者无权为米哈游的决定背书。目前可以讲的是：从 App Store / TestFlight 安装的披萨小助手不包含对米哈游任何游戏进行内存注入（Memory Injection）的功能；Apple 不会允许此类行为，披萨小助手也从未实作过需要内存注入的功能。</p>
+			<p>开发者无权为米哈游的决策背书。目前可以讲的是：从 App Store / TestFlight 安装的披萨小助手不包含对米哈游任何游戏进行运存注入（Memory Injection）的功能；Apple 不会允许此类行为，披萨小助手也从未实作过需要运存注入的功能。// 注：「运存」乃「电脑运行内存」的简体中文现代称谓，因为手机用户们往往并不知道他们口中的「内存」应该称为「手机硬盘空间」。</p>
 
 			<h4>Q: 我是旧版原神披萨小助手（Pizza Helper 4 Genshin，v4 系列）的用户，且旧设备无法安装 iOS 17+。请问在跨设备迁移资料时该注意什么？</h4>
 
