PublicDocs // Address the app title of The Latte Helper.

--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/EULA.html
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/EULA.html
@@ -222,7 +222,7 @@
 	</header>
 	<main>
 		<div id="content-en-US" class="content" lang="en">
-			<h1>The Pizza Helper End-User License Agreement and Disclaimer</h1>
+			<h1>The Pizza Helper / The Latte Helper End-User License Agreement and Disclaimer</h1>
 
 			<blockquote>
 				All translations of this document are for reference purposes only. The original Simplified Chinese version of this document is the only legally binding version.
@@ -230,7 +230,7 @@
 
 
 			<p>
-				The User is hereby reminded to carefully read and fully understand the terms of this <strong>"The Pizza Helper End-User License Agreement and Disclaimer"</strong> (hereinafter referred to as "this Agreement"), including clauses that limit the Developer's liability and those that restrict the User's rights. Before using this application and its related services, the User must carefully review this Agreement and decide whether to accept it (minors should read it with their legal guardians). If the User does not agree with all the terms in this Agreement, they are not authorized to use the relevant services. By using the services, the User acknowledges and agrees to be bound by the terms of this Agreement.
+				The User is hereby reminded to carefully read and fully understand the terms of this <strong>"The Pizza Helper / The Latte Helper End-User License Agreement and Disclaimer"</strong> (hereinafter referred to as "this Agreement"), including clauses that limit the Developer's liability and those that restrict the User's rights. Before using this application and its related services, the User must carefully review this Agreement and decide whether to accept it (minors should read it with their legal guardians). If the User does not agree with all the terms in this Agreement, they are not authorized to use the relevant services. By using the services, the User acknowledges and agrees to be bound by the terms of this Agreement.
 			</p>
 
 
@@ -377,7 +377,7 @@
 			</ol>
 		</div>
 		<div id="content-zh-Hant" class="content active" lang="zh">
-			<h1><strong>披薩小助手使用者授權合約與免責聲明</strong></h1>
+			<h1><strong>披薩小助手/拿鐵小助手使用者授權合約與免責聲明</strong></h1>
 
 			<blockquote>
 				本文件的所有翻譯版本僅供參考，唯有簡體中文原版具法律效力。
@@ -385,7 +385,7 @@
 
 
 			<p>
-				特別提醒使用者務必詳細閱讀並充分理解本《披薩小助手使用者授權合約與免責聲明》（以下簡稱「本合約」）之內容，尤其是涉及免責條款及對使用者權利之限制條款。使用者在使用敝應用程式及相關服務前，應仔細審閱本合約，並選擇是否接受（未成年人應在法定監護人陪同下審閱）。若使用者不同意本合約所列全部條款，則無權使用相關服務。使用者一經使用，即視為同意接受本合約各項條款之約束。
+				特別提醒使用者務必詳細閱讀並充分理解本《披薩小助手/拿鐵小助手使用者授權合約與免責聲明》（以下簡稱「本合約」）之內容，尤其是涉及免責條款及對使用者權利之限制條款。使用者在使用敝應用程式及相關服務前，應仔細審閱本合約，並選擇是否接受（未成年人應在法定監護人陪同下審閱）。若使用者不同意本合約所列全部條款，則無權使用相關服務。使用者一經使用，即視為同意接受本合約各項條款之約束。
 			</p>
 
 
@@ -536,7 +536,7 @@
 
 		</div>
 		<div id="content-zh-Hans" class="content" lang="zh">
-			<h1><strong>披萨小助手用户许可协议与免责声明</strong></h1>
+			<h1><strong>披萨小助手/拿铁小助手用户许可协议与免责声明</strong></h1>
 
 			<blockquote>
 				本文件的所有翻译版本仅供参考，唯有简体中文原版具有法律效力。
@@ -544,7 +544,7 @@
 
 
 			<p>
-				特别提醒用户务必详细阅读并充分理解本《披萨小助手用户许可协议与免责声明》（以下简称「本合约」）之内容，尤其是涉及免责条款及对用户权利之限制条款。用户在使用敝应用程序及相关服务前，应仔细审阅本合约，并选择是否接受（未成年人应在法定监护人陪同下审阅）。若用户不同意本合约所列全部条款，则无权使用相关服务。用户一经使用，即视为同意接受本合约各项条款之约束。
+				特别提醒用户务必详细阅读并充分理解本《披萨小助手/拿铁小助手用户许可协议与免责声明》（以下简称「本合约」）之内容，尤其是涉及免责条款及对用户权利之限制条款。用户在使用敝应用程序及相关服务前，应仔细审阅本合约，并选择是否接受（未成年人应在法定监护人陪同下审阅）。若用户不同意本合约所列全部条款，则无权使用相关服务。用户一经使用，即视为同意接受本合约各项条款之约束。
 			</p>
 
 
@@ -695,7 +695,7 @@
 
 		</div>
 		<div id="content-ja-JP" class="content" lang="ja">
-			<h1><strong>ピザ助手アプリ使用者許諾契約及び免責声明</strong></h1>
+			<h1><strong>ピザ助手/ラテ助手アプリ使用者許諾契約及び免責声明</strong></h1>
 
 			<blockquote>
 				本書の全ての翻訳は参考のためのみ提供され、簡体字中国語の原本のみが法的効力を有す。
@@ -703,7 +703,7 @@
 
 
 			<p>
-				使用者各位、本「ピザ助手アプリ使用者許諾契約及び免責声明」（以下「本契約」という）の内容を慎重に読了し、充分に理解せんことを要請す。特に、開発者の責任免除条項及び使用者の権利に関する制限条項について留意すべきである。未成年者は法定後見人の同伴の下、これを読了すべし。本契約の諸条件に同意しない場合、当アプリケーション（略称「当アプリ」）及び関連サービスを利用せしことはできぬものとす。使用者が本サービスを利用する際は、本契約に拘束されることを承認したものと見なされる。
+				使用者各位、本「ピザ助手/ラテ助手アプリ使用者許諾契約及び免責声明」（以下「本契約」という）の内容を慎重に読了し、充分に理解せんことを要請す。特に、開発者の責任免除条項及び使用者の権利に関する制限条項について留意すべきである。未成年者は法定後見人の同伴の下、これを読了すべし。本契約の諸条件に同意しない場合、当アプリケーション（略称「当アプリ」）及び関連サービスを利用せしことはできぬものとす。使用者が本サービスを利用する際は、本契約に拘束されることを承認したものと見なされる。
 			</p>
 
 
