--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/PRIVACY_POLICY.html
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/PRIVACY_POLICY.html
@@ -234,14 +234,14 @@
 				</blockquote>
 
 				<p>
-					Pizza Studio has released the &quot;The Pizza Helper&quot; application
+					Pizza Studio has released the &quot;The Pizza Helper / The Latte Helper&quot; application
 					(2022 version, 2024 re-release) as an open-source app. This service is
 					provided by Pizza Studio (hereinafter referred to as &quot;the
 					Developer&quot;) for free via the Mac App Store and iOS App Store.
 				</p>
 
 				<p>
-					If someone decides to use the &quot;The Pizza Helper&quot;
+					If someone decides to use the &quot;The Pizza Helper / The Latte Helper&quot;
 					(hereinafter referred to as &quot;this application&quot;), this page
 					is used to inform visitors about the collection, use, and disclosure
 					of data by the application.
@@ -481,13 +481,13 @@
 				</blockquote>
 
 				<p>
-					披薩工作室將「披薩小助手」應用（2022 年製，2024
+					披薩工作室將「披薩小助手/拿鐵小助手」應用（2022 年製，2024
 					年重製）作為一個開源應用釋出。本服務由披薩工作室（下稱「開發者」）藉由
 					Mac App Store 與 iOS App Store 以免費的形式原樣提供。
 				</p>
 
 				<p>
-					如果有人決定使用「披薩小助手」（下稱「敝應用」）的服務，本頁面用於通知訪問者關於該應用對資料的收集、使用和披露政策。
+					如果有人決定使用「披薩小助手/拿鐵小助手」（下稱「敝應用」）的服務，本頁面用於通知訪問者關於該應用對資料的收集、使用和披露政策。
 				</p>
 
 				<p>
@@ -648,13 +648,13 @@
 				</blockquote>
 
 				<p>
-					披萨工作室将「披萨小助手」应用（2022 年制，2024
+					披萨工作室将「披萨小助手/拿铁小助手」应用（2022 年制，2024
 					年重制）作为一个开源应用释出。本服务由披萨工作室（下称「开发者」）借由
 					Mac App Store 与 iOS App Store 以免费的形式原样提供。
 				</p>
 
 				<p>
-					如果有人决定使用「披萨小助手」（下称「敝应用」）的服务，本页面用于通知访问者关于该应用对资料的收集、使用和披露政策。
+					如果有人决定使用「披萨小助手/拿铁小助手」（下称「敝应用」）的服务，本页面用于通知访问者关于该应用对资料的收集、使用和披露政策。
 				</p>
 
 				<p>
@@ -813,7 +813,7 @@
 				</blockquote>
 
 				<p>
-					使用者各位、本プライバシーポリシー（以下「本ポリシー」といふ）は、「ピザ助手」アプリ（以下「当アプリ」といふ）に関し、開発者（以下「当方」といふ）が収集し、使用し、または開示せし情報の取扱いに関する規定を定めたものである。
+					使用者各位、本プライバシーポリシー（以下「本ポリシー」といふ）は、「ピザ助手/ラテ助手」アプリ（以下「当アプリ」といふ）に関し、開発者（以下「当方」といふ）が収集し、使用し、または開示せし情報の取扱いに関する規定を定めたものである。
 				</p>
 
 				<p>
