--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
@@ -291,7 +291,7 @@
 
 			<p>If both your old and new devices use the same Apple ID and have iCloud Drive enabled with sufficient storage, your old gacha history should theoretically be migratable via iCloud. However, there is no absolute guarantee that the process will always succeed. For a more reliable migration method: update the old Pizza Helper to the latest App Store version and use the app's export feature to produce a Pizza Refugee Data file. Then import the data into the new Pizza Helper on the new device using Local Profile Manager; Gacha records can be imported using UIGF v4 format.</p>
 
-			<h4>Q: I am a refugee of The Pizza Helper / The Latte Helper for HSR. What should I be aware of when migrating to this new app?</h4>
+			<h4>Q: I am a refugee of The Pizza Helper for HSR. What should I be aware of when migrating to this new app?</h4>
 
 			<p>1. <strong>Data Sync</strong>: Although the new unified Pizza Helper engine can read cloud data from Pizza Helper for HSR on the same Apple ID via iCloud, the data synchronization may take time and can be affected by factors like connection status. For a more reliable migration, you can export your local accounts from Pizza Helper for HSR as a JSON file (profile package) and import it into the new version of The Pizza Helper / The Latte Helper. Gacha records can also be migrated using a similar method (via file exchange conforming to UIGF v4 format).</p>
 
@@ -776,11 +776,11 @@
 
 			<p>开发者无权为米哈游的决策背书。目前可以讲的是：从 App Store / TestFlight 安装的披萨小助手/拿铁小助手不包含对米哈游任何游戏进行运存注入（Memory Injection）的功能；Apple 不会允许此类行为，披萨小助手/拿铁小助手也从未实作过需要运存注入的功能。// 注：「运存」乃「电脑运行内存」的简体中文现代称谓，因为手机用户们往往并不知道他们口中的「内存」应该称为「手机硬盘空间」。</p>
 
-			<h4>Q: 我是旧版原神披萨小助手/拿铁小助手（Pizza Helper 4 Genshin，v4 系列）的用户，且旧设备无法安装 iOS 17+。请问在跨设备迁移资料时该注意什么？</h4>
+			<h4>Q: 我是旧版原神披萨小助手（Pizza Helper 4 Genshin，v4 系列）的用户，且旧设备无法安装 iOS 17+。请问在跨设备迁移资料时该注意什么？</h4>
 
 			<p>如果您的新旧设备使用相同 Apple ID 并启用 iCloud Drive，且 iCloud 空间充足，旧版的抽卡记录理论上可以通过 iCloud 迁移，但该过程并不保证始终成功。更稳妥的方式是：先在旧设备上将披萨小助手/拿铁小助手更新至 App Store 的最新版并按界面提示导出披萨难民数据（Pizza Refugee Data）；然后在新设备上运行新版披萨小助手/拿铁小助手，通过本地账号管理器导入本地账号数据，抽卡记录可通过 UIGF v4 格式导入。</p>
 
-			<h4>Q: 我是星铁披萨小助手/拿铁小助手的用户，请问在迁移过来时需要注意什么？</h4>
+			<h4>Q: 我是星铁披萨小助手的用户，请问在迁移过来时需要注意什么？</h4>
 
 			<p>一是资料同步：虽然基于统一披萨引擎的全新的披萨小助手/拿铁小助手可以通过 iCloud 读取到同一 Apple ID 下的星铁披萨小助手/拿铁小助手的云端资料，但同步读取资料是需要时间的、且可能受到包括网络连接状态等多方因素之影响。如希望能有更稳妥的迁移手段的话，您可以通过星铁披萨小助手/拿铁小助手将其本地账号全部导出为一个 JSON、再导入到目前的新版披萨小助手/拿铁小助手内。抽卡记录也可以用类似的手段迁移（使用 UIGF v4 格式）。</p>
 
@@ -1025,9 +1025,9 @@
 
 			<p>古いデバイスと新しいデバイスが同じApple IDでiCloud Driveにサインインしており、iCloudのストレージに十分な空きがある場合、古いガチャ履歴は理論上iCloudを介して移行できます。ただし、このプロセスが常に成功する保証はありません。より確実な移行方法としては、古いデバイスのピザ助手/ラテ助手をApp Storeの最新バージョンに更新し、アプリのエクスポート機能を使用して「ピザ難民資料（Pizza Refugee Data）」を出力してください。それを新しいデバイスのピザ助手/ラテ助手にインポートすることでローカルアカウントのデータが復元されます。ガチャ記録はUIGF v4形式でインポートできます。</p>
 
-			<h4>Q: 『崩スタピザ助手/ラテ助手』の使用者です。この新しい『ピザ助手/ラテ助手（無印）』に移行する際に注意すべきことはございますか？</h4>
+			<h4>Q: 『崩スタピザ助手』の使用者です。この新しい『ピザ助手/ラテ助手（無印）』に移行する際に注意すべきことはございますか？</h4>
 
-			<p>1. <strong>データ同期</strong>：新しい『統一ピザ助手/ラテ助手エンジン』で稼働している『ピザ助手/ラテ助手（無印）』は、同じApple IDでiCloudを通じて『崩スタピザ助手/ラテ助手』のクラウドデータを読み取ることができますが、データ同期には時間がかかる場合があり、接続状態などの要因によって影響を受けることがございます。より確実な移行を行うためには、『崩スタピザ助手/ラテ助手』からローカルアカウントをJSONファイル（プロファイル統括パッケージ）として書き出し、『ピザ助手/ラテ助手（無印）』に読み込むすることをお勧めします。ガチャ記録も同様の方法で移行できます（UIGF v4形式に準拠したファイル交換を通じて）。</p>
+			<p>1. <strong>データ同期</strong>：新しい『統一ピザ助手/ラテ助手エンジン』で稼働している『ピザ助手/ラテ助手（無印）』は、同じApple IDでiCloudを通じて『崩スタピザ助手』のクラウドデータを読み取ることができますが、データ同期には時間がかかる場合があり、接続状態などの要因によって影響を受けることがございます。より確実な移行を行うためには、『崩スタピザ助手』からローカルアカウントをJSONファイル（プロファイル統括パッケージ）として書き出し、『ピザ助手/ラテ助手（無印）』に読み込むすることをお勧めします。ガチャ記録も同様の方法で移行できます（UIGF v4形式に準拠したファイル交換を通じて）。</p>
 
 			<p>2. <strong>ウィジェット</strong>：『ピザ助手/ラテ助手（無印）』では、『原神』専用のウィジェットも『スターレイル』のコンテンツを表示できるようになりました（洞天集宝盆などの『原神』固有のウィジェットは除く）。ウィジェット設定で『スターレイル』用のローカルプロファイルを選択してください。iOSの組み込みLive Activity機能を使って実装されたスタミナタイマーも、『スターレイル』での開拓力の補充状況を表示するために使用できます。ウィジェットのユーザーカスタム背景サポートはv5.2.1アップデートにて再びサポートし始めましたが、旧版のアプリのこの設定の引き継ぎは無理です。この機能についてのUI文字説明をご参考くださいませ。</p>
 
@@ -1121,7 +1121,7 @@
 
 			<h4>Q: Paimon.moeのガチャ記録フォーマットはどう処理すればよいか？</h4>
 
-			<p>当該サイトが提供するExcel形式のガチャ記録フォーマットには、UIGFv4規定に従った重要な情報欄が不足しているため、この前「原神ピザ助手/ラテ助手」にはUIGFv4対応を実装した際に、Paimon.moeの独自Excelフォーマットのサポート機能を完全に放棄しました。この機能は現在の「ピザ助手/ラテ助手（無印）」にも実装されていません。当該サイトのガチャ記録データをUIGFv4標準に対応するアプリに読み込む必要がある場合は、Paimon.moeには「UIGFv4で記録を書き出す機能を実装なさる」よう、ご要求くださいませ。</p>
+			<p>当該サイトが提供するExcel形式のガチャ記録フォーマットには、UIGFv4規定に従った重要な情報欄が不足しているため、この前「原神ピザ助手」にはUIGFv4対応を実装した際に、Paimon.moeの独自Excelフォーマットのサポート機能を完全に放棄しました。この機能は現在の「ピザ助手/ラテ助手（無印）」にも実装されていません。当該サイトのガチャ記録データをUIGFv4標準に対応するアプリに読み込む必要がある場合は、Paimon.moeには「UIGFv4で記録を書き出す機能を実装なさる」よう、ご要求くださいませ。</p>
 
 			<h4>Q: 「星穹鉄道 UID」および「HoYoLABがホストする原神UID」のガチャ記録 URL をどのように取得すればよいか？</h4>
 
