FAQ // Update certain sections with better explanations.

--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
@@ -398,7 +398,7 @@
 				<li>There are too many packet capture tools for Windows and macOS systems to list here.</li>
 			</ul>
 
-			<p>The packet capturing rule is to filter all URLs containing the path "<code>/api/getGachaLog</code>". The domains of gacha URLs for different game regions will all start with "<code>public-operation</code>":</p>
+			<p>The packet capturing rule is to filter all URLs containing the path "<code>/api/getGachaLog</code>" or "<code>/api/getLdGachaLog</code>". The domains of gacha URLs for different game regions will all start with "<code>public-operation</code>":</p>
 
 			<ul>
 				<li>Gacha URLs for UIDs governed by Miyoushe will have domains ending with `mihoyo.com`.</li>
@@ -643,7 +643,7 @@
 				<li>Windows 與 macOS 系統的抓包工具太多，不作贅述。</li>
 			</ul>
 
-			<p>抓包規則就是篩檢所有包含「<code>/api/getGachaLog</code>」路徑內容的 URL。不同遊戲的不同區服的抽卡網址的域名均以「<code>public-operation</code>」開頭：</p>
+			<p>抓包規則就是篩檢所有包含「<code>/api/getGachaLog</code>」或「<code>/api/getLdGachaLog</code>」路徑內容的 URL。不同遊戲的不同區服的抽卡網址的域名均以「<code>public-operation</code>」開頭：</p>
 
 			<ul>
 				<li>受米遊社管轄的 UID 的抽卡網址的域名均以 `mihoyo.com` 結尾。</li>
@@ -888,7 +888,7 @@
 				<li>Windows 与 macOS 系统的抓包工具太多，不作赘述。</li>
 			</ul>
 
-			<p>抓包规则就是筛选所有包含「<code>/api/getGachaLog</code>」路径内容的 URL。不同游戏的不同区服的抽卡网址的域名均以「<code>public-operation</code>」开头：</p>
+			<p>抓包规则就是筛选所有包含「<code>/api/getGachaLog</code>」或「<code>/api/getLdGachaLog</code>」路径内容的 URL。不同游戏的不同区服的抽卡网址的域名均以「<code>public-operation</code>」开头：</p>
 
 			<ul>
 				<li>受米游社管辖的 UID 的抽卡网址的域名均以 `mihoyo.com` 结尾。</li>
@@ -1134,7 +1134,7 @@
 				<li>WindowsおよびmacOSのパケットキャプチャツールは多すぎるため、詳細は省略します。</li>
 			</ul>
 
-			<p>パケットキャプチャのルールは、「<code>/api/getGachaLog</code>」パスを含むすべてのURLを検出することです。異なるゲーム地域のガチャURLのドメインはすべて「<code>public-operation</code>」で始まります：</p>
+			<p>パケットキャプチャのルールは、「<code>/api/getGachaLog</code>」もしくは「<code>/api/getLdGachaLog</code>」パスを含むすべてのURLを検出することです。異なるゲーム地域のガチャURLのドメインはすべて「<code>public-operation</code>」で始まります：</p>
 
 			<ul>
 				<li>米遊社在籍のUIDのガチャURLのドメインは、`mihoyo.com`で終わります。</li>
