FAQ // Patch a typo.

--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/FAQ.html
@@ -533,7 +533,7 @@
 
 			<h4>Q: 我是舊版原神披薩小助手/拿鐵小助手（Pizza Helper 4 Genshin）（截至 v4 版）的使用者，且舊裝置無法安裝 iOS 17+。請問在跨裝置遷移資料時該注意什麼？</h4>
 
-			<p>如果您的新舊裝置都有藉由相同 Apple ID 開啟 iCloud Drive 並具有足夠空間的話，舊版的抽卡記錄理論上是可以通過 iCloud 遷移的。然而，誰也無法保證這個過程會不會出現變數。更穩妥的方式是：先將舊設備上的披薩小助手/拿鐵小助手更新至 App Store 上的最新版本並使用該版本提供的匯出功能產生 Pizza Refugee Data 檔案。接著在新的裝置上使用本地帳號管理功能導入該檔案；抽卡記錄可透過 UIGF v4 格式匯入。</p>
+			<p>如果您的新舊裝置都有藉由相同 Apple ID 開啟 iCloud Drive 並具有足夠空間的話，舊版的抽卡記錄理論上是可以通過 iCloud 遷移的。然而，誰也無法保證這個過程會不會出現變數。更穩妥的方式是：先將舊設備上的披薩小助手/拿鐵小助手更新至 App Store 上的最新版本並使用該版本提供的匯出功能產生 Pizza Refugee Data 檔案。接著在新的裝置上使用本機帳號管理功能導入該檔案；抽卡記錄可透過 UIGF v4 格式匯入。</p>
 
 			<h4>Q: 我是星鐵披薩小助手/拿鐵小助手的使用者，請問在遷移過來時需要注意什麼？</h4>
 
